# Kandidat

./: .gitignore  .gitmodules  .~lock.protokoll.odt#  Inköpslista.xlsx  Inköpslista_v2.xlsx  README.md  Thumbs.db  ipc.txt  ipc_cap.txt  ipc_cap.xls  ipc_res.xls  protokoll.odt  sh.exe.stackdump
Main_card/: CAMtastic1.Cam  CAMtastic2.Cam  Display.SchDoc  MIDOSDISP.SchLib  Main.SchDoc  Main_card.PcbDoc  Main_card.PrjPcb  display.PcbLib
Main_card/Gerber/: cam.drl  cam.rpt  drill.gbr  drill_main.drl  drill_main.rpt  film_bot.gbr  film_botsolder.gbr  film_bottom.gbr  film_bottomsolder.gbr  film_drill.gbr  film_top.gbr  film_topsolder.gbr  profile.gbr
Main_card/Project Outputs for Main_card/: Design Rule Check - Main_card.drc  Design Rule Check - Main_card.html  Main_card.REP  Main_card.tgz  Main_card.xls  Status Report.Txt
Main_card/__Previews/: Main.SchDocPreview
Output/: IPC Compliant Footprint Wizard - Batch Report 2017-mar-08, 01.45 pm.html  IPC Compliant Footprint Wizard - Batch Report 2017-mar-08, 01.52 pm.html  IPC Compliant Footprint Wizard - Batch Report 2017-mar-08, 01.58 pm.html  IPC Compliant Footprint Wizard - Batch Report 2017-mar-08, 02.07 pm.html  IPC Compliant Footprint Wizard - Batch Report 2017-mar-08, 02.10 pm.html
Passenger/: Thumbs.db
Passenger/passeger/: CAMtastic1.Cam  Passenger.PcbDoc  passeger.PrjPcb  passeger.PrjPcbStructure  passenger.SchDoc  plcc6.PcbLib  plcc6.SchLib
altiumlibs/: MIC4605-1YM.bxl  NSC Amplifier.LibPkg  TM4c123gh6pm.IntLib  mosfets.SchLib  std.PcbLib  std.SchLib
altiumlibs/Atmel Microcontroller AVR XMEGA/: Microcontroller AVR XMEGA.PcbLib  Microcontroller AVR XMEGA.SchLib
altiumlibs/Miscellaneous Connectors/: Miscellaneous Connectors.PcbLib  Miscellaneous Connectors.SchLib
display/: 595.SchLib  display.PcbLib  displaykort.SchDoc
display/Blinkers/: Blinkers.PrjPcb  Blinkers.PrjPcbStructure  blinkers.PcbDoc  blinkers.SchDoc
display/PCB_Project/: MIDOSDISP.SchLib  PCB_Project.PrjPcb  PCB_Project.PrjPcbStructure  displaykort.PcbDoc  displaykort.SchDoc
hbridge/: Thumbs.db
hbridge/H-bridge/: CAMtastic1.Cam  CAMtastic3.Cam  DXPPreferences1.DXPPrf  H-bridge.IntLib  H-bridge.OutJob  H-bridge.PrjPcb  H-bridge.PrjPcbStructure  INDC3924X34M.PcbLib  controller.SchDoc  hbridge.PcbDoc  hbridge.PcbDoc.htm  hbridge.SLDPRT  hbridge.SchDoc  mosfets.SchLib  psu.SchDoc  rpmsens.SchDoc  std.PcbLib  std.SchLib  swreg.SchLib
hbridge/encoder/: CAMtastic1.Cam  CAMtastic4.Cam  PCB1.PcbDoc  altium_encoder.DXF  encoder.DXF  encoder.OutJob  encoder.PcbDoc  encoder.PrjPcb  encoder.PrjPcbStructure  encoder.SLDPRT  encoder.STEP  encoder.STL  encoderx4.PcbDoc  gerbers.OutJob  odb.OutJob  rout_gbr.plt  rpmsens.SchDoc
hbridge/figures/: Thumbs.db
hbridge/goldsrc/: CMakeLists.txt  Descriptors.c  VirtualSerial.c  gpa_scpi.c  gpa_scpi.h  motors.c  motors.h  motors_scpi.c  motors_scpi.h
hbridge/goldsrc/Config/: LUFAConfig.h
hbridge/src/: CMakeLists.txt  avg_adc.c  avg_adc.h  blinkers.c  blinkers.h  gpa_scpi.c  gpa_scpi.h  main.c  motors.h  motors_scpi.c  scpi_distance.c  scpi_distance.h  scpi_sensors.c  scpi_sensors.h
mek/: Assem1.SLDASM  camera.SLDPRT  camera.STL  front.SLDPRT  front.STL  front.gcode  holder.SLDPRT  holder.STL  irsens.SLDPRT  irsens.STL
raspberry/: Thumbs.db  agv.py  agv_camera.py  agv_config.gmd  agv_linefollow.py  agv_linefollower.py  agv_sensors.py  agv_signs.py  agv_state.py  aruco_make.py  aruco_picam.py  aruco_test.py  bluetooth_server.py  performance.txt  remote_ctrl.py  scpi_client.py  scpi_server.py
raspberry/states/: __init__.py  agv_state.py  state_follow.py  state_lead.py  state_start.py  state_station_enter.py  state_station_exit.py  state_station_stop.py  state_stop.py
raspberry_gcc/: pi.cmake
reflex/: 4051.PcbLib  4051.SchLib  CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic_reflex.Cam  QRE1113.PcbLib  QRE1113.SchLib  Sheet1.SchDoc  Thumbs.db  reflex.PcbDoc  reflex.PcbDoc.htm  reflex.PrjPCB  reflex.SchDoc  reflextest.PcbDoc
reflex/Gerber/: Plot_main1.FPF  Plot_main2.FPF  cam.drl  cam.rpt  drill.gbr  film_bot.gbr  film_botsolder.gbr  film_bottom.gbr  film_bottomsolder.gbr  (+4 more)
solidworks/: reg2.SLDDRW  reg2.SLDPRT  reg2_tb1337.SLDPRT  reg2_tb1337.STL
(+188 files in other folders)
